<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MusicAlarm</string>
    <string name="save">save</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="start">MusicStart!</string>
    <string name="stop">Stop Music</string>
    <string name="reset">reset</string>
    <string name="config_time_default">00:00</string>
    <string name="config_title_default">SampleTitle</string>
    <string name="config_devicename_default">SampleDeviceName</string>
    <string name="config_music_default">MusicFileName</string>
    <string name="config_time_title">AlarmTime</string>
    <string name="alartStart">alarmStart</string>
    <string name="alartStop">alarmStop</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_music">MusicActivity</string>
    <string name="serviceStart">service Start</string>
    <string name="serviceStop">service Stop</string>
    <string name="serviceCheck">service Check</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="inline_preferences">inline_preferences</string>
    <string name="summary_checkbox_preference">summary_checkbox_preference</string>
    <string name="title_checkbox_preference">title_checkbox_preference</string>
    <string name="dialog_based_preferences">dialog_based_preferences</string>
    <string name="dialog_title_edittext_preference">dialog_title_edittext_preference</string>
    <string name="summary_edittext_preference">summary_edittext_preference</string>
    <string name="title_edittext_preference">title_edittext_preference</string>
    <string name="dialog_title_list_preference">dialog_title_list_preference</string>
    <string name="summary_list_preference">summary_list_preference</string>
    <string name="title_list_preference">title_list_preference</string>
    <string name="launch_preferences">launch_preferences</string>
    <string name="summary_fragment_preference">summary_fragment_preference</string>
    <string name="title_fragment_preference">title_fragment_preference</string>
    <string name="summary_intent_preference">summary_intent_preference</string>
    <string name="title_intent_preference">title_intent_preference</string>
    <string name="preference_attributes">preference_attributes</string>
    <string name="summary_parent_preference">summary_parent_preference</string>
    <string name="title_parent_preference">title_parent_preference</string>
    <string name="summary_child_preference">summary_child_preference</string>
    <string name="title_child_preference">title_child_preference</string>
    <string name="preferences_category_basic_title">基本設定</string>
    <string name="preference_item_enable_summary">この設定の有効/無効を設定します。</string>
    <string name="preference_item_enable_title">有効/無効</string>
    <string name="preference_item_title_dialogtitle">タイトル設定</string>
    <string name="preference_item_title_summary">表示されるタイトルを設定します。</string>
    <string name="preference_item_title_title">タイトル設定</string>
    <string name="preferences_category_time_title">時間設定</string>
    <string name="preferences_category_help_title">ヘルプ</string>
    <string name="preference_item_mypage_summary">このアプリケーションの作者のブログへアクセスします。</string>
    <string name="preference_item_mypage_title">作者ページ</string>
    <string name="preference_list_datetype_summary">アラームを設定する曜日を設定します。</string>
    <string name="preference_list_datetype_title">アラーム曜日設定</string>
    <string name="preference_item_enable_key">preference_item_enable_key</string>
    <string name="preference_item_title_key">preference_item_title_key</string>
    <string name="preference_list_datetype_key">preference_list_datetype_key</string>

</resources>