<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/headButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/MusicStartButton"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickStartMusic"
            android:text="@string/start" />

        <Button
            android:id="@+id/MusicEndButton"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickStopMusic"
            android:text="@string/stop" />
    </LinearLayout>
   <LinearLayout
        android:id="@+id/serviceButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_below="@+id/headButtons">

        <Button
            android:id="@+id/serviceStartButton"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickStartService"
            android:text="@string/serviceStart" />

        <Button
            android:id="@+id/serviceEndButton"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickStopService"
            android:text="@string/serviceStop" />
        <Button
            android:id="@+id/serviceCheckButton"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickCheckService"
            android:text="@string/serviceCheck" />
        </LinearLayout>    
    <ListView
        android:id="@+id/ConfigList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/serviceButtons" />

</RelativeLayout>